tests/integration/errors/generic_bound_not_satisfied.rsg
// TEST: compile_error
// EXPECT-ERROR: does not satisfy pact bound
// v0.8.0 — Error: type argument does not satisfy pact bound
module test_err

pact Display {
    fn to_display() -> str
}

fn show<T: Display>(x: T) -> str {
    x.to_display()
}

struct Plain {
    value: i32 = 0
}

fn main() {
    a := Plain { value = 1 }
    show<Plain>(a)
}
